# cel-rust

./: Cargo.toml
cel/: Cargo.toml
cel/src/: context.rs  duration.rs  extensions.rs  functions.rs  json.rs  lib.rs  objects.rs  proto_compare.rs  ser.rs
cel/src/checker/: env.rs  mod.rs  stdlib.rs  types.rs
cel/src/common/ast/: mod.rs  operators.rs
cel/src/parser/: macros.rs  parse.rs  parser.rs  references.rs
conformance/: Cargo.toml  README.md  build.rs
conformance/src/: lib.rs  runner.rs  textproto.rs  type_env.rs  value_converter.rs
conformance/src/proto/: mod.rs
