[package]
name = "conformance"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
cel = { path = "../cel", features = ["json", "proto"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.5"
protobuf = "3.4"
regex = "1.10"
tempfile = "3.10"
which = "6.0"
termcolor = "1.4"
chrono = "0.4"

[build-dependencies]
prost-build = "0.12"

[[bin]]
name = "run_conformance"
path = "src/bin/run_conformance.rs"

